--- a/src/app/products/create-products/create-products.component.html
+++ b/src/app/products/create-products/create-products.component.html
@@ -18,14 +18,12 @@
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Referencia del
                                             Producto</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Referencia"
-                                            formControlName="referencia">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Referencia" formControlName="referencia">
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Nombre del
                                             Producto</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre"
-                                            formControlName="nombre">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre" formControlName="nombre">
                                     </div>
                                 </div>
 
@@ -33,13 +31,11 @@
                                 <div class="row mt-2">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Valor Entrada</label>
-                                        <input type="text" class="form-control form-control-lg"
-                                            placeholder="Valor Entrada" formControlName="valorEntrada">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Valor Entrada" formControlName="valorEntrada">
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Precio USD</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Precio USD"
-                                            formControlName="precioUSD">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Precio USD" formControlName="precioUSD">
                                     </div>
                                 </div>
 
@@ -47,8 +43,7 @@
                                 <div class="row mt-2">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Valor Salida</label>
-                                        <input type="text" class="form-control form-control-lg"
-                                            placeholder="Valor Salida" formControlName="vaorSalida">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Valor Salida" formControlName="vaorSalida">
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Proveedor</label>
@@ -67,8 +62,7 @@
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Talla del
                                             Producto</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Talla"
-                                            formControlName="talla">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Talla" formControlName="talla">
                                     </div>
                                     <!-- <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Categoria</label>
@@ -111,17 +105,13 @@
                                 <div class="row mt-2">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Subir Imagen</label>
-                                        <input type="file" accept=".png, .jpg" class="form-control"
-                                            (change)="cargarImagen($event)">
+                                        <input type="file" accept=".png, .jpg" class="form-control" (change)="cargarImagen($event)">
                                         <img [src]="urlImages" width="250px" alt="" *ngIf="urlImages">
                                     </div>
                                 </div>
                                 <div class="mt-3" style="text-align: center;">
-                                    <button type="text" class="btn btn-lg mr-3"
-                                        style="padding: 1rem;background-color: #dbb22a;"
-                                        routerLink="/product-list">Volver</button>
-                                    <button type="submit" class="btn btn-lg"
-                                        style="padding: 1rem;background-color: #1dd56f;">{{ tituloButton }}</button>
+                                    <button type="text" class="btn btn-lg mr-3" style="padding: 1rem;background-color: #dbb22a;" routerLink="/product-list">Volver</button>
+                                    <button type="submit" class="btn btn-lg" style="padding: 1rem;background-color: #1dd56f;">{{ tituloButton }}</button>
                                 </div>
                             </form>
                         </div>
