--- a/src/app/products/list-products/list-products.component.html
+++ b/src/app/products/list-products/list-products.component.html
@@ -6,8 +6,8 @@
             </div>
             <div class="card-body">
                 <div class="col-md-12">
-                    <input [(ngModel)]="filterValue" matInput class="form-control"
-                        style="display: initial;width: auto;" type="text" placeholder="Buscar producto">
+                    <input [(ngModel)]="filterValue" matInput class="form-control" style="display: initial;width: auto;"
+                        type="text" placeholder="Buscar producto">
                     <button class="btn btn-primary btn-lg float-right" style="padding: 1rem;"
                         routerLink="/create-product">Agregar</button>
                     <div class="card">
@@ -17,40 +17,60 @@
                                 <table *ngIf="productos.length > 0" class="table">
                                     <thead class=" text-primary">
                                         <th>
+                                            Referencia
+                                        </th>
+                                        <th>
                                             Nombre
                                         </th>
                                         <th>
-                                            Precio
+                                            Valor Entrada
                                         </th>
                                         <th>
-                                            Talla
+                                            Precio USD
                                         </th>
                                         <th>
-                                            Categoria
+                                            Valor Salida
                                         </th>
                                         <th>
-                                            Descripción
+                                            Proveedor
+                                        </th>
+                                        <th>
+                                            Publico
+                                        </th>
+                                        <th>
+                                            Coleccion
                                         </th>
                                         <th>
                                             Opciones
                                         </th>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let producto of productos| filterProducts: filterValue  | slice:desde:hasta  ">
+                                        <tr
+                                            *ngFor="let producto of productos| filterProducts: filterValue  | slice:desde:hasta  ">
+                                            <td>
+                                                {{ producto.referencia }}
+                                            </td>
                                             <td>
                                                 {{ producto.nombre }}
                                             </td>
                                             <td>
-                                                {{ producto.precio | currency }}
+                                                {{ producto.valorEntrada | currency }}
+                                            </td>
+
+                                            <td>
+                                                {{ producto.precioUSD | currency }}
                                             </td>
                                             <td>
-                                                {{ producto.talla }}
+                                                {{ producto.valorSalida | currency }}
                                             </td>
                                             <td>
-                                                {{ producto.categoria }}
+                                                {{ producto.proveedor }}
                                             </td>
                                             <td>
-                                                {{ producto.descripcion }}
+                                                {{ producto.publicForm }}
+                                            </td>
+                                            <td>
+                                                {{ producto.coleccion }}
                                             </td>
                                             <td class="text-primary">
                                                 <img [routerLink]="['/editProducto/', producto.id]"
