--- a/src/app/proveedors/create-proveedor/create-proveedor.component.html
+++ b/src/app/proveedors/create-proveedor/create-proveedor.component.html
@@ -1,1 +1,71 @@
-<p>create-proveedor works!</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header card-header-danger">
+                <h4 class="card-title"> titulo
+                    <!-- <div *ngIf="loading" class="spinner-border text-light" role="status">
+                        <span class="visually-hidden"></span>
+                    </div> -->
+                </h4>
+            </div>
+            <div class="card-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 offset-lg-3">
+
+                            <form action="">
+                                <div class="row">
+                                    <div class="col">
+
+                                        <label for="exampleFormControlInput1" class="form-label">
+                                            Nombre Contacto</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre"
+                                            formControlName="nombreContacto">
+                                    </div>
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Empresa</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Empresa"
+                                            formControlName="empresa">
+                                    </div>
+                                </div>
+
+
+                                <div class="row mt-2">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Ciudad</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Ciudad"
+                                            formControlName="ciudad">
+                                    </div>
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">E-mail</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="E-mail"
+                                            formControlName="email">
+                                    </div>
+                                </div>
+
+
+                                <div class="row mt-2">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Telefono</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Telefono"
+                                            formControlName="telefono">
+                                    </div>
+                                </div>
+
+
+                                <div class="mt-3" style="text-align: center;">
+                                    <button type="text" class="btn btn-lg mr-3"
+                                        style="padding: 1rem;background-color: #dbb22a;"
+                                        routerLink="/list-proveedor">Volver</button>
+                                    <button type="submit" class="btn btn-lg"
+                                        style="padding: 1rem;background-color: #1dd56f;"> tituloButton </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
