--- a/src/app/proveedors/list-proveedor/list-proveedor.component.html
+++ b/src/app/proveedors/list-proveedor/list-proveedor.component.html
@@ -1,1 +1,80 @@
-<p>list-proveedor works!</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header card-header-danger">
+                <h4 class="card-title">Listado de Productos</h4>
+            </div>
+            <div class="card-body">
+                <div class="col-md-12">
+                    <!-- <input [(ngModel)]="filterValue" matInput class="form-control" style="display: initial;width: auto;"
+                        type="text" placeholder="Buscar producto"> -->
+                    <button class="btn btn-primary btn-lg float-right" style="padding: 1rem;"
+                        routerLink="/create-proveedor">Agregar</button>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <!-- <h4 *ngIf="productos.length == 0">No hay datos para mostrar</h4> -->
+                                <table class="table">
+                                    <thead class=" text-primary">
+                                        <th>
+                                            Nombre Contacto
+                                        </th>
+                                        <th>
+                                            Empresa
+                                        </th>
+                                        <th>
+                                            Ciudad
+                                        </th>
+                                        <th>
+                                            Email
+                                        </th>
+                                        <th>
+                                            Telefonó
+                                        </th>
+                                        <th>
+                                            Opciones
+                                        </th>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                1
+                                            </td>
+                                            <td>
+                                                2
+                                            </td>
+                                            <td>
+                                                3
+                                            </td>
+                                            <td>
+                                                4
+                                            </td>
+                                            <td>
+                                                5
+                                            </td>
+                                            <td>
+                                                6
+                                            </td>
+
+                                            <td class="text-primary">
+                                                <!-- <img [routerLink]="['/editProducto/', producto.id]"
+                                                    src="https://incontactostorageprod.blob.core.windows.net/subirm/16504985398181650498539818.png"
+                                                    style="width: 25px;margin-right: 1rem;" alt="">
+                                                <img (click)="eliminarProducto(producto.id)"
+                                                    src="https://incontactostorageprod.blob.core.windows.net/subirm/16504986570091650498657009.png"
+                                                    style="width: 25px;" alt=""> -->
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <!-- <mat-paginator [length]="productos.length" [pageSize]="pageSize"
+                                    (page)="cambiarPagina($event)">
+                                </mat-paginator> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
