--- a/src/app/proveedors/create-proveedor/create-proveedor.component.html
+++ b/src/app/proveedors/create-proveedor/create-proveedor.component.html
@@ -13,7 +13,7 @@
                     <div class="row">
                         <div class="col-lg-6 offset-lg-3">
 
-                            <form action="">
+                            <form action="" [formGroup]="createProveedor" (ngSubmit)="agregarEditarProveedor()">
                                 <div class="row">
                                     <div class="col">
 
@@ -58,7 +58,7 @@
                                         style="padding: 1rem;background-color: #dbb22a;"
                                         routerLink="/list-proveedor">Volver</button>
                                     <button type="submit" class="btn btn-lg"
-                                        style="padding: 1rem;background-color: #1dd56f;"> tituloButton </button>
+                                        style="padding: 1rem;background-color: #1dd56f;"> {{tituloButton}} </button>
                                 </div>
                             </form>
                         </div>
