--- a/src/app/proveedors/create-proveedor/create-proveedor.component.html
+++ b/src/app/proveedors/create-proveedor/create-proveedor.component.html
@@ -2,10 +2,10 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header card-header-danger">
-                <h4 class="card-title"> titulo
-                    <!-- <div *ngIf="loading" class="spinner-border text-light" role="status">
+                <h4 class="card-title"> {{ titulo }}
+                    <div *ngIf="loading" class="spinner-border text-light" role="status">
                         <span class="visually-hidden"></span>
-                    </div> -->
+                    </div>
                 </h4>
             </div>
             <div class="card-body">
