--- a/src/app/clients/create-clients/create-clients.component.html
+++ b/src/app/clients/create-clients/create-clients.component.html
@@ -2,10 +2,10 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header card-header-danger">
-                <h4 class="card-title"> titulo
-                    <!-- <div *ngIf="loading" class="spinner-border text-light" role="status">
+                <h4 class="card-title"> {{ titulo }}
+                    <div *ngIf="loading" class="spinner-border text-light" role="status">
                         <span class="visually-hidden"></span>
-                    </div> -->
+                    </div>
                 </h4>
             </div>
             <div class="card-body">
@@ -13,7 +13,7 @@
                     <div class="row">
                         <div class="col-lg-6 offset-lg-3">
 
-                            <form action="">
+                            <form  [formGroup]="crearCliente" (ngSubmit)="agregarEditarCliente()" action="">
                                 <div class="row">
                                     <div class="col">
 
@@ -56,9 +56,9 @@
                                 <div class="mt-3" style="text-align: center;">
                                     <button type="text" class="btn btn-lg mr-3"
                                         style="padding: 1rem;background-color: #dbb22a;"
-                                        routerLink="/create-client">Volver</button>
+                                        routerLink="/list-clients">Volver</button>
                                     <button type="submit" class="btn btn-lg"
-                                        style="padding: 1rem;background-color: #1dd56f;"> tituloButton </button>
+                                        style="padding: 1rem;background-color: #1dd56f;"> {{ tituloButton }} </button>
                                 </div>
                             </form>
                         </div>
